# pdf-editor-2025-07-21

./: README.md  package-lock.json  package.json
pdf-editor/: index.html  package-lock.json  package.json  vite.config.ts
pdf-editor/src/: App.tsx  index.css  main.tsx
pdf-editor/src-tauri/: Cargo.toml  tauri.conf.json
pdf-editor/src-tauri/src/: main.rs
