[package]
name = "pdf-editor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf = "0.9"
lopdf = "0.33"
base64 = "0.22"
image = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
